refactor: alterado lógica dos componentes
