# src/libs/openapi-generator/model/permission.ts
@@ -2,6 +2,7 @@
  * key-keeper
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
+ * The version of the OpenAPI document: 0.0
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -10,7 +11,7 @@
  */
 import { Requester } from './requester';
 import { User } from './user';
-import { Environment } from './environment';
+import { Facility } from './facility';
 
 
 export interface Permission { 
@@ -19,7 +20,7 @@ export interface Permission {
     active?: boolean;
     createdAt?: string;
     updatedAt?: string;
-    environment?: Environment | null;
+    facility?: Facility | null;
     requester?: Requester | null;
     user?: User | null;
     description?: string;
