# src/libs/openapi-generator/model/requester.ts
@@ -2,13 +2,14 @@
  * key-keeper
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
+ * The version of the OpenAPI document: 0.0
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
-import { Position } from './position';
+import { JobTitle } from './jobTitle';
 
 
 export interface Requester { 
@@ -20,6 +21,6 @@ export interface Requester {
     name?: string;
     email?: string;
     register?: string;
-    position?: Position | null;
+    jobTitle?: JobTitle | null;
 }
 
