# src/libs/openapi-generator/model/reservation.ts
@@ -2,6 +2,7 @@
  * key-keeper
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
+ * The version of the OpenAPI document: 0.0
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -11,7 +12,7 @@
 import { Status } from './status';
 import { User } from './user';
 import { Permission } from './permission';
-import { Environment } from './environment';
+import { Facility } from './facility';
 
 
 export interface Reservation { 
@@ -21,7 +22,7 @@ export interface Reservation {
     createdAt?: string;
     updatedAt?: string;
     permission?: Permission | null;
-    environment?: Environment | null;
+    facility?: Facility | null;
     user?: User | null;
     notes?: string;
     startDateTime?: string;
